--- a/templates/imagen1.html
+++ b/templates/imagen1.html
@@ -11,7 +11,10 @@
     </div>
     
     <div class="boton">
-        <a href="{{ url_for('encuesta', pagina=1) }}"><button>Seguir encuesta</button></a>
+        <a href="{{ url_for('ver_imagen1') }}" class="boton-animado">Comenzar Encuesta</a>
     </div>
+    
+    
+    
 </body>
 </html>
