--- a/templates/imagen3.html
+++ b/templates/imagen3.html
@@ -11,7 +11,7 @@
     </div>
     
     <div class="boton">
-        <a href="{{ url_for('encuesta', pagina=3) }}"><button>Seguir encuesta</button></a>
+        <a href="{{ url_for('encuesta', pagina=3) }}" class="boton-animado">Siguiente</a>
     </div>
 </body>
 </html>
