--- a/templates/recomendaciones.html
+++ b/templates/recomendaciones.html
@@ -23,6 +23,6 @@
     {% endif %}
 </a>
 
-    <a href="{{ url_for('dashboard') }}">Volver al Inicio</a>
+    <a href="{{ url_for('resultado') }}"class="boton-verde">Atrás</a> 
 </body>
 </html>
