--- a/templates/registro.html
+++ b/templates/registro.html
@@ -46,12 +46,10 @@
         <label for="apps_usadas">Aplicaciones (separadas por comas):</label>
         <input type="text" id="Apps_usadas" name="Apps_usadas" placeholder="Ej: Duolingo, Photomath, Khan Academy"><br>
 
-        <button type="submit">Registrar</button>
-    </form>
-
-    <br>
-    <a href="{{ url_for('login') }}">¿Ya tienes cuenta? Inicia sesión</a>
-    <br><br>
-    <a href="{{ url_for('home') }}">Volver al inicio</a>
+        <div class="contenedor-botones">
+            <button type="submit" class="boton-animado">Registrar</button>
+            <a href="{{ url_for('login') }}" class="boton-animado">¿Ya tienes cuenta? Inicia sesión</a>
+            <a href="{{ url_for('home') }}" class="boton-animado">Volver al inicio</a>
+        </div>
 </body>
 </html>
